Version 0.6.1
    * [Upd] UI: Remove unecessary titled 'job' panel
    * [Upd] Add UP and DOWN key for Search shortcut
    * [Upd] Replace Search matcher by contains
    * [Fix] Bug in JSON parsing causes infinite loop
Version 0.6.0
    * [Add] Support Cloudbees repository
    * [Add] Browser : Favorite Job feature (See README.md on github project)
    * [Add] Configuration Panel: when clicking on the Test Connection, if the HTTP code is 401 or 403 then the response body is displayed in a panel
    * [Upd] Handling JSON data instead of XML
    * [Fix] Regression: NPE when clicking on the Test Connection

Version 0.5.4
    * [Add] Job can be sorted by status (fail, unstable, success) - See the new button on the panel
    * [Upd] Widget: UI layout modification
    * [Fix] IDEA-86137 Thread leak in the EDT
    * [Fix] #25 The plugin should compare the configured port and the jenkins server one
    * [Fix] #26 Incorrect feedback message when clicking on the 'Test Connection' button
    * [Fix] Jenkins Panel disappears when typing CTRL + F4

Version 0.5.3
    * [Fix] Widget : UI Issue on Windows and MacOS environment

Version 0.5.2
    * [Add] Widget : when clicking on the status icon, a popup is displayed with builds status summary info
    * [Add] The plugin starts up with the last selected view
    * [Upd] Improvement in handling Exception
    * [Upd] Job are loaded in background (with a waiting UI decorator)
    * [Fix] The Widget should not be duplicated when opening new Project Window
    * [Fix] Build Parameter dialog does not work

Version 0.5.1
    * [Fix] Regression : When the server url is not set (or set to a dummy url), the plugin should not try to connect
    * [Fix] Browser Panel : OneTouch Expandable should be accessible

Version 0.5.0
    * [Add] Job Tree : Search job panel (CTRL + F, F3 to search forward, SHIFT + F3 to search backward, the search feature is cyclic)